WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56780
Solve the Assertions.cpp / -Wno-missing-format-attribute mystery
https://bugs.webkit.org/show_bug.cgi?id=56780
Summary
Solve the Assertions.cpp / -Wno-missing-format-attribute mystery
Adam Barth
Reported
2011-03-21 16:38:21 PDT
Solve the Assertions.cpp / -Wno-missing-format-attribute mystery
Attachments
Patch
(4.93 KB, patch)
2011-03-21 16:41 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(5.05 KB, patch)
2011-03-21 16:56 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-03-21 16:41:49 PDT
Created
attachment 86386
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-03-21 16:50:47 PDT
Comment on
attachment 86386
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=86386&action=review
> Source/JavaScriptCore/wtf/Assertions.cpp:29 > +#pragma GCC diagnostic ignored "-Wmissing-format-attribute"
You should comment as to why this is needed for this file (so it has a prayer of being removed some day.
Adam Barth
Comment 3
2011-03-21 16:56:55 PDT
Created
attachment 86388
[details]
Patch
Eric Seidel (no email)
Comment 4
2011-03-21 17:00:38 PDT
Comment on
attachment 86388
[details]
Patch Yay!
Adam Barth
Comment 5
2011-03-21 17:16:56 PDT
Comment on
attachment 86388
[details]
Patch Clearing flags on attachment: 86388 Committed
r81624
: <
http://trac.webkit.org/changeset/81624
>
Adam Barth
Comment 6
2011-03-21 17:17:00 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7
2011-03-21 18:06:22 PDT
http://trac.webkit.org/changeset/81624
might have broken Qt Linux Release The following tests are not passing: css2.1/t09-c5526c-display-00-e.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug